@@ -43,11 +43,22 @@ dependencies {
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'org.testcontainers:mariadb'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	testImplementation 'org.mockito:mockito-core:5.8.0'
+	testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
+	testImplementation 'net.bytebuddy:byte-buddy:1.14.10'
+	testImplementation 'net.bytebuddy:byte-buddy-agent:1.14.10'
 }
 
 test {
 	useJUnitPlatform()
 	exclude '**/integrationtest/**'
+
+	// Mockito 에이전트 설정 추가
+	jvmArgs = [
+			'-XX:+EnableDynamicAgentLoading',
+			'-javaagent:' + configurations.testRuntimeClasspath.find { it.name.contains('byte-buddy-agent') }.absolutePath
+	]
 }
 
 // Git hooks 설치를 위한 task 정의
